--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
 }
 
 nav img {
@@ -87,7 +88,7 @@ nav img {
   color: #1A535C;
 }
 
-.home-text p, strong {
+.home-text p > strong {
   font-family: 'Source Code Pro', monospace;
 }
 
