--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ font-family: 'Source Code Pro', monospace;
 
 section {
   min-height: calc(100vh - 60px);
+  max-width: 100vw;
+  overflow: scroll;
+  position: relative;
 }
 
 /* ------------------ NAV BAR ------------------ */
@@ -21,7 +24,7 @@ nav {
   top: 0;
   background-color: #220F24;
   height: 60px;
-  width: 100%;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -49,7 +52,7 @@ nav img {
 
 /* --------------- NAV-MODAL --------------- */
 .nav-modal-container{
-  /* display: none; */
+  display: none;
   position: fixed;
   width: 100vw;
   height: calc(100vh - 60px);
@@ -286,6 +289,96 @@ h1 {
 }
 
 /* ------------------ ABOUT ------------------ */
+section h2 {
+  color: #1A535C;
+  font-size: 3rem;
+  font-weight: 100;
+  padding: 20px 0;
+}
+
+.section-text {
+  color: #1A535C;
+}
+
+.about-text {
+  height: clamp(155px, 28vh, 300px);
+  overflow: scroll;
+}
+
+/* width */
+.about-text::-webkit-scrollbar {
+  width: 4px;
+  height: 0;
+}
+
+/* Track */
+.about-text::-webkit-scrollbar-track {
+  background: none;
+}
+
+/* Handle */
+.about-text::-webkit-scrollbar-thumb {
+  background: #1A535C;
+  border-radius: 8px;
+}
+
+/* Handle on hover */
+.about-text::-webkit-scrollbar-thumb:hover {
+  background: #6EA4BF;
+}
+
+.about-text p:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.about-text a {
+  text-decoration: none;
+  color: #1A535C;
+  font-weight: 600;
+}
+
+.about-grid {
+  display: grid;
+  width: clamp(200px, 30vw, 400px);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  margin: 0 auto;
+  margin-top: 1.5rem;
+  background-color: #fff;
+}
+
+.about-grid > div {
+  height: 100px;
+}
+
+.about-grid img {
+  width: 100px;
+  height: 100px;
+  opacity: 50%;
+}
+
+.about-grid img.about-img-active {
+  opacity: 100%;
+  scale: 120%;
+  z-index: 1;
+  position: absolute;
+}
+
+.bg-text {
+  color: #6EA4BF;
+  opacity: 30%;
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  font-size: 9rem;
+  max-width: 100vw;
+  overflow-x: hidden;
+  z-index: -1;
+}
+
+.about-container .bg-text p {
+  transform: translateX(8%);
+}
 
 /* ------------------ SKILLS ------------------ */
 
