--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ section {
   position: relative;
 }
 
+/* width */
+section::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
 /* ------------------ NAV BAR ------------------ */
 nav {
   position: fixed;
@@ -381,6 +387,89 @@ section h2 {
 }
 
 /* ------------------ SKILLS ------------------ */
+.skills-header {
+  display: flex;
+  align-items: center;
+}
+
+.skills-header i {
+  color: #6EA4BF;
+  font-size: 2.5rem;
+  font-weight: 100;
+  margin-left: 1rem;
+}
+
+.card {
+  position: relative;
+  width: 100%;
+  height: 140px;
+  transform-style: preserve-3d;
+  transition: all 0.5s ease;
+}
+
+.card:not(:last-of-type) {
+  margin-bottom: 3rem;
+}
+
+.card.card-active {
+  transform: rotateY(180deg);
+}
+
+.card-front {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background-color: #f5f5f5;
+  color: #6EA4BF;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background-color: #1A535C;
+  color: #FCF7F8;
+  transform: rotateY(180deg);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0.5rem 4rem;
+}
+
+.card:nth-of-type(1) .card-back{
+  padding: 0.5rem 5rem;
+}
+
+.card:nth-of-type(2) .card-back{
+  padding: 0.5rem 6rem;
+}
+
+.card-back h4 {
+  font-size: 1.2rem;
+  font-weight: 100;
+  align-self: center;
+  margin-bottom: 0.5rem;
+}
+
+.card-back li {
+  font-size: 0.9rem;
+}
+
+.skills-container .bg-text {
+  bottom: 30%;
+}
+
+.skills-container .bg-text p {
+  transform: translateX(8%);
+}
 
 /* ------------------ PORTFOLIO ------------------ */
 
