--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 /*
 font-family: 'Roboto', sans-serif;
 font-family: 'Source Code Pro', monospace;
-#6EA4BF
 */
 
 section {
@@ -18,7 +17,6 @@ section {
   position: relative;
 }
 
-/* width */
 section::-webkit-scrollbar {
   width: 0;
   height: 0;
@@ -472,5 +470,44 @@ section h2 {
 }
 
 /* ------------------ PORTFOLIO ------------------ */
+.portfolio-projects-container {
+  margin-top: 1rem;
+  height: clamp(300px, 30vh, 600px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.project-container {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  background-color: #FCF7F8;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.project-container img {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  object-position: 100% 0%;
+}
+
+.project-container h3 {
+  color: #6EA4BF;
+  font-size: 1.5rem;
+  margin-left: 0.5rem;
+  font-weight: 100;
+}
+
+.project-active {
+  background-color: #220F24;
+}
+
+.project-active h3 {
+  color: #f5f5f5;
+}
 
 /* ------------------ CONTACT ------------------ */
