--- a/style.css
+++ b/style.css
@@ -751,14 +751,29 @@ form input {
   margin-bottom: 1rem;
   padding: 0.5rem;
   background-color: #FCF7F8;
-  color: #6EA4BF;
+  color: #220F24;
   border: none;
   font-size: 1rem;
   font-family: 'Source Code Pro', monospace;
 }
 
-form input:focus {
+form input.focus {
   background-color: #331E36;
+  color: #6EA4BF;
+}
+
+form input.invalid {
+  background-color: #e9a19c;
+  color: #220F24;
+}
+
+form input.invalid::placeholder {
+  color: #220F24;
+}
+
+form input.valid {
+  background-color: #aee99c;
+  color: #220F24;
 }
 
 textarea {
@@ -772,8 +787,13 @@ textarea {
   font-family: 'Source Code Pro', monospace;
 }
 
-textarea:focus {
+textarea.focus {
   background-color: #331E36;
+}
+
+textarea.valid {
+  background-color: #aee99c;
+  color: #220F24;
 }
 
 form input::placeholder {
