--- a/style.css
+++ b/style.css
@@ -39,6 +39,52 @@ nav {
 
 nav img {
   max-height: 48px;
+  animation: centerLogo 1s ease 1;
+  transition: all 1s;
+}
+
+nav img.center {
+  transform: translateX(70%);
+}
+
+.nav-title {
+  color: #fff;
+}
+
+.nav-title h4 {
+  opacity: 0;
+  font-weight: 800;
+  font-size: 1.2rem;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  transition: all .6s ease;
+}
+
+.nav-title h4.show {
+  opacity: 100;
+  transform: rotateY(0deg);
+}
+
+.nav-title p {
+  font-weight: 100;
+  font-size: 0.7rem;
+  opacity: 0;
+  transform: translateY(-1rem);
+  transition: all .4s ease;
+}
+
+.nav-title p.show {
+  opacity: 10;
+  transform: translateY(0);
+}
+
+@keyframes showWebDev {
+  0%{
+  }
+  100%{
+    opacity: 100;
+    transform: translateY(0);
+  }
 }
 
 .fa-bars {
@@ -371,6 +417,12 @@ h1 {
 }
 
 /* ------------------ ABOUT ------------------ */
+.about-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 section h2 {
   color: #1A535C;
   font-size: 3rem;
@@ -383,7 +435,7 @@ section h2 {
 }
 
 .about-text {
-  height: clamp(155px, 28vh, 300px);
+  height: clamp(120px, 25vh, 300px);
   overflow: scroll;
 }
 
@@ -426,28 +478,31 @@ section h2 {
 
 .about-grid {
   display: grid;
-  width: clamp(200px, 30vw, 400px);
+  width: clamp(200px, calc(100vw - 80px), 400px);
+  /* height: clamp(200px, 75vw, 400px); */
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  margin: 0 auto;
-  margin-top: 1.5rem;
+  margin: auto auto;
   background-color: #fff;
 }
 
 .about-grid > div {
-  height: 100px;
+  height: 100%;
+  position: relative;
 }
 
 .about-grid img {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  max-width: 400px;
+  height: 100%;
+  max-height: 400px;
   opacity: 50%;
   transition: all .3s;
 }
 
 .about-grid img.about-img-active {
   opacity: 100%;
-  scale: 120%;
+  scale: 115%;
   z-index: 1;
   position: absolute;
 }
@@ -457,7 +512,7 @@ section h2 {
   opacity: 30%;
   position: absolute;
   right: 0;
-  bottom: 20px;
+  bottom: 3vh;
   font-size: 9rem;
   max-width: 100vw;
   overflow-x: hidden;
@@ -514,7 +569,7 @@ section h2 {
   transition: all 0.5s ease;
 }
 
-.card:not(:last-of-type) {
+.card {
   margin-bottom: 2rem;
 }
 
