--- a/style.css
+++ b/style.css
@@ -806,6 +806,8 @@ section h2 {
   flex-direction: column;
   align-items: center;
   margin-top: auto;
+  cursor: pointer;
+  z-index: 1;
 }
 
 .project-links a {
