--- a/media-queries.css
+++ b/media-queries.css
@@ -336,25 +336,9 @@
     height: 100%;
   }
 
-  .nav-btns button {
-    height: 100%;
-    background: none;
-    border: none;
-    font-size: 1.5rem;
-    padding: 1rem;
-    color: #fff;
-    transition: all .2s ease;
-  }
-
   .nav-btns button.active {
     background: #fff;
     color: #220f24;
-  }
-
-  .nav-btns button i {
-    color: #fff;
-    padding-right: 0.5rem;
-    transition: all .2s ease;
   }
 
   /* ---------------- HOME ---------------- */
@@ -424,7 +408,7 @@
   .portfolio-click-sign {
     position: absolute;
     top:100px;
-    right: 10vw;
+    right: 120px;
     height: 50px;
     display: flex;
     flex-direction: column;
@@ -569,6 +553,10 @@
     margin-top: auto;
   }
 
+  nav .credits a {
+    cursor: pointer;
+  }
+
   /* ---------------- MAIN ---------------- */
   main {
     margin-top: 0;
@@ -576,8 +564,20 @@
   }
 
   section {
-    max-width: calc(100vw - 200px);
+    width: calc(100vw - 200px);
+    max-width: 1080px;
     min-height: 100vh;
+    margin: 0 auto;
+  }
+
+  /* ---------------- HOME ---------------- */
+  .home-container {
+    overflow-x: visible;
+  }
+
+  .profile-circle-01 {
+    right: 15%;
+    bottom: 20%;
   }
 
   /* ---------------- ABOUT ---------------- */
@@ -586,9 +586,23 @@
   }
 
   .about-grid {
-    width: clamp(400px, 30vw, 600px);
+    width: 400px;
     transform: translateY(0);
-    top: 48px;
+    top: 80px;
+  }
+
+  .about-grid img {
+    cursor: pointer;
+  }
+
+  /* ---------------- SKILLS ---------------- */
+  .card {
+    cursor: pointer;
+  }
+
+  /* -------------- PORTFOLIO -------------- */
+  .portfolio-container .bg-text p {
+    transform: translateX(35%);
   }
 
   /* -------------- PORT MODAL -------------- */
@@ -599,8 +613,35 @@
     right: 0;
   }
 
-  .portfolio-container .bg-text p {
-    transform: translateX(35%);
+  .portfolio-modal-bg {
+    height: 500px;
+    width: 720px;
+  }
+
+  .portfolio-modal-bg h3 {
+    font-size: 2.5rem;
+  }
+
+  .portfolio-modal-bg .fa-circle-xmark {
+    font-size: 2rem;
+  }
+
+  .portfolio-modal-bg .project-text {
+    font-size: 1rem;
+    height: 115px;
+  }
+
+  .portfolio-modal-bg video {
+    width: 400px;
+  }
+
+  .portfolio-nav {
+    width: calc(100% - calc(400px + 2.5rem));
+  }
+
+  .project-links {
+    font-size: 1.5rem;
+    width: calc(100% - calc(400px + 2.5rem));
   }
 
   /* -------------- CONTACT -------------- */
@@ -610,7 +651,7 @@
   }
 
   .contact-text {
-    width: calc(100vw - 800px);
+    width: 480px;
     padding-right: 2.5rem;
   }
 
@@ -632,7 +673,8 @@
     position: absolute;
     display: flex;
     flex-direction: row;
-    bottom: 48px;
+    bottom: 1.5rem;
+    left: 3.5rem;
     display: block;
     opacity: 50%;
     width: 140px;
@@ -644,6 +686,24 @@
   }
 
   .contact-click-sign i {
+    animation: point-left 1.5s infinite;
+  }
+
+  @keyframes point-left {
+    0% {
+      transform: translateX(-1rem);
+    }
+    50% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-1rem);
+    }
+  }
+
+  .contact-click-sign i {
+    position: absolute;
+    translate: -40px 50%;
     color: #6ea4bf;
     font-size: 2rem;
   }
