--- a/style.css
+++ b/style.css
@@ -559,6 +559,7 @@ section h2 {
   height: 100%;
   max-height: 400px;
   opacity: 50%;
+  cursor: pointer;
   transition: all .3s;
 }
 
@@ -628,6 +629,7 @@ section h2 {
   width: 100%;
   height: 140px;
   transform-style: preserve-3d;
+  cursor: pointer;
   transition: all 0.5s ease;
 }
 
@@ -1012,6 +1014,12 @@ form button {
   font-family: 'Source Code Pro', monospace;
   font-size: 1rem;
   font-weight: 100;
+  cursor: pointer;
+  transition: all .2s ease;
+}
+
+form button:hover {
+  background-color: #220F24;
 }
 
 .contact-click-sign {
