style: Add hover behavior to nav buttons
Updated style.css and style-pt.css files

--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ nav {
   display: none;
 }
 
+.nav-btns li button:hover{
+  background-color: #331E36;
+}
+
 nav img {
   max-height: 48px;
   animation: centerLogo 1s ease 1;
