--- a/style-pt.css
+++ b/style-pt.css
@@ -41,6 +41,10 @@ nav {
   display: none;
 }
 
+.nav-btns li button:hover{
+  background-color: #331E36;
+}
+
 nav img {
   max-height: 48px;
   animation: centerLogo 1s ease 1;
@@ -559,6 +563,7 @@ section h2 {
   height: 100%;
   max-height: 400px;
   opacity: 50%;
+  cursor: pointer;
   transition: all .3s;
 }
 
@@ -632,6 +637,7 @@ section h2 {
   width: 100%;
   height: 140px;
   transform-style: preserve-3d;
+  cursor: pointer;
   transition: all 0.5s ease;
 }
 
@@ -1016,6 +1022,12 @@ form button {
   font-family: 'Source Code Pro', monospace;
   font-size: 1rem;
   font-weight: 100;
+  cursor: pointer;
+  transition: all .2s ease;
+}
+
+form button:hover {
+  background-color: #220F24;
 }
 
 .contact-click-sign {
